--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
 	<body>
 	
-		<header>
+	<header>
 		<div class="container">
 			<div class="row justify-content-between align-items-center">
 				<div class="col-auto">
@@ -24,7 +24,7 @@
 				</div>
 			</div>
 		</div>
-	 </header>
+	
 		
 	<div class="modal fade profile-options-modal" id="profileOptions" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
 	  <div class="modal-dialog" role="document">
@@ -57,6 +57,144 @@
 	    </div>
 	  </div>
 	</div>
+		
+	</header>	
+	
+	<main class="main">
+		<div class="container">
+				<div class="search-container">
+				<form>
+					 <input type="text" name="searchInput" id="searchInput">
+					 <button type="button" class="btn btn-primary btn-block">Buscar</button>
+				</form>
+				
+				</div>
+				<div class="products-list-container">
+				<ul>
+				<li>
+						<a href="#">
+							<div class="product-image">
+								<img src="img/producto1.jpg" alt="">
+							</div>
+							<div class="product-info">
+								<div class="product-info-inner">
+									<div class="tags">
+										<span>Descuento</span><span>Envío gratis</span>
+									</div>
+									<h3 class="product-name">Burrito especial</h3>
+									<p class="restaurant">Restaurante de prueba</p>
+									<div class="stars">
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+									</div>
+								</div>
+								<p class="product-price"><span>$</span>14,99</p>
+							</div>
+						</a>
+					</li>
+
+					<li>
+						<a href="#">
+							<div class="product-image">
+								<img src="img/producto2.jpg" alt="">
+							</div>
+							<div class="product-info">
+								<div class="product-info-inner">
+									<div class="tags">
+										<span>2x1</span><span>Descuento 50%</span>
+									</div>
+									<h3 class="product-name">Postre de la casa</h3>
+									<p class="restaurant">Restaurante de prueba</p>
+									<div class="stars">
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+									</div>
+								</div>
+								<p class="product-price"><span>$</span>6,99</p>
+							</div>
+						</a>
+					</li>
+
+					<li>
+						<a href="#">
+							<div class="product-image">
+								<img src="img/producto3.jpg" alt="">
+							</div>
+							<div class="product-info">
+								<div class="product-info-inner">
+									<div class="tags">
+										<span>2x1</span><span>Envío gratis</span><span>Descuento</span>
+									</div>
+									<h3 class="product-name">Salmón</h3>
+									<p class="restaurant">Restaurante de prueba</p>
+									<div class="stars">
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+									</div>
+								</div>
+								<p class="product-price"><span>$</span>21,47</p>
+							</div>
+						</a>
+					</li>
+
+					<li>
+						<a href="#">
+							<div class="product-image">
+								<img src="img/producto4.jpg" alt="">
+							</div>
+							<div class="product-info">
+								<div class="product-info-inner">
+									<div class="tags">
+										<span>Envío gratis</span>
+									</div>
+									<h3 class="product-name">Donas glaseadas x6</h3>
+									<p class="restaurant">Restaurante de prueba</p>
+									<div class="stars">
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+									</div>
+								</div>
+								<p class="product-price"><span>$</span>9,99</p>
+							</div>
+						</a>
+					</li>
+
+					<li>
+						<a href="#">
+							<div class="product-image">
+								<img src="img/producto5.jpg" alt="">
+							</div>
+							<div class="product-info">
+								<div class="product-info-inner">
+									<div class="tags">
+										<span>Envío gratis</span><span>Combo</span>
+									</div>
+									<h3 class="product-name">Mega hamburguesa</h3>
+									<p class="restaurant">Restaurante de prueba</p>
+									<div class="stars">
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+										<i class="fas fa-star"></i>
+									</div>
+								</div>
+								<p class="product-price"><span>$</span>15,99</p>
+							</div>
+						</a>
+					</li>
+				
+				</ul>
+				</div>
+		</div>
+	</main>
 		
 		<script src="js/jquery.js"></script>
 		<script src="js/popper.js"></script>
