Finalizar seccion de productos

--- a/index.html
+++ b/index.html
@@ -64,12 +64,12 @@
 		<div class="container">
 				<div class="search-container">
 				<form>
-					 <input type="text" name="searchInput" id="searchInput">
-					 <button type="button" class="btn btn-primary btn-block">Buscar</button>
+					<input type="text" name="searchInput" id="searchInput">
+					<button type="button" class="btn btn-primary btn-block">Buscar</button>
 				</form>
-				
-				</div>
+			</div>
 				<div class="products-list-container">
+				<h2 class="section-title">Los más pedidos</h2>
 				<ul>
 				<li>
 						<a href="#">
@@ -192,6 +192,12 @@
 					</li>
 				
 				</ul>
+				<div class="pt-4 pb-5 text-center">
+					<a href="#" class="btn btn-block btn-link">
+						<span class="d-block mb-2">Ver más productos</span>
+						<i class="fas fa-arrow-down"></i>
+					</a>
+				</div>
 				</div>
 		</div>
 	</main>
